update Java readme file